  ══════════
  March 3rd, 2020
 ══════════
  Main App (v3.6.0.0)
  • UPDATED: Reverted the device detection logic and added the data directly into the main app code.
  • FIXED: Changes to the getDeviceActivity() logic to make it quicker and more accurate.
  • FIXED: Device Activity which was ruined after my last update.
  • FIXED: WebSocket Events not updating device info (Hubitat Only).

  Action App (v3.6.0.0)
  • FIXED: Bugs fixed and optimizations.

  Zone App (v3.6.0.0)
  • FIXED: Bugs fixed and optimizations.

  Echo Device (v3.6.0.0)
  • FIXED: Issue with Queue not working.
  • FIXED: Issue with Queue getting stuck in rare scenarios..
  • FIXED: Device Activity which was ruined after my last update.
  • FIXED: WebSocket Events not updating device info (Hubitat Only).
  • FIXED: Cleaned up device events filling up device history (ST)
  • UPDATED: Log cleanups.

  WebSocket Device (v3.3.0.0)
  • FIXED: WebSocket Events not working for Device Activity (Hubitat Only).

  Server (v2.4.0)
  • FIXED: Wakeup fixes.
  • FIXED: Other optimizations and fixes.
_____________________________________

  ══════════
  February 17th, 2020
 ══════════
  Main App (v3.5.0.1)
  • UPDATED: Log cleanups.

  Echo Device (v3.5.0.1)
  • UPDATED: Log cleanups.
_____________________________________

 ══════════
  February 9th, 2020
 ══════════
  Main App (v3.5.0.0)
  • UPDATED: Overhauled the way supported device data is loaded to reduce state size consumption.  All data is pulled from a Firebase Database now.
  • ADDED: Device Activity data is now loaded from the smartapp and available to the devices to reduce the many reduntant calls to the API which causes rate-limiting. #230
  • FIXED: Stopped removing ' character from speech text builder. #226
  • FIXED: Lot's of other minor UI and logic bugfixes.

  Action App (v3.5.0.0)
  • FIXED: Resolved issue with multiple actions conditions being ignored #232
  • ADDED: You can now define volumes for each tier in tiered actions.