@@ -32,7 +32,7 @@ metadata {
         capability "Speech Synthesis"
 
         attribute "alarmVolume", "number"
-        attribute "alexaNotifications", "JSON_OBJECT"
+        // attribute "alexaNotifications", "JSON_OBJECT"
         attribute "alexaPlaylists", "JSON_OBJECT"
         // attribute "alexaGuardStatus", "string"
         attribute "alexaWakeWord", "string"
@@ -80,6 +80,7 @@ metadata {
         command "playSingASong", ["number", "number"]
         command "playFlashBrief", ["number", "number"]
         command "playFunFact", ["number", "number"]
+        command "playGoodNews", ["number", "number"]
         command "playTraffic", ["number", "number"]
         command "playJoke", ["number", "number"]
         command "playSoundByName", ["string", "number", "number"]
@@ -422,6 +423,9 @@ metadata {
         standardTile("playFlashBrief", "playFlashBrief", height: 1, width: 1, decoration: "flat") {
             state("default", label:'', action: 'playFlashBrief', icon: "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/device/flash_brief.png")
         }
+        standardTile("playGoodNews", "playGoodNews", height: 1, width: 1, decoration: "flat") {
+            state("default", label:'', action: 'playGoodNews', icon: "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/device/flash_brief.png")
+        }
         standardTile("sayGoodMorning", "sayGoodMorning", height: 1, width: 1, decoration: "flat") {
             state("default", label:'', action: 'sayGoodMorning', icon: "https://raw.githubusercontent.com/tonesto7/echo-speaks/master/resources/icons/device/good_morning.png")
         }
@@ -676,7 +680,7 @@ Boolean isCommandTypeAllowed(String type, noLogs=false) {
                 warnMsg = "OOPS... Spotify is NOT Supported by this Device!!!"
                 break
             case "flashBriefing":
-                warnMsg = "OOPS... Flash Briefs are NOT Supported by this Device!!!"
+                warnMsg = "OOPS... Flash Briefs and Good News are NOT Supported by this Device!!!"
                 break
         }
         if(warnMsg && !noLogs) { logWarn(warnMsg, true) }
@@ -788,13 +792,13 @@ void websocketUpdEvt(triggers) {
                 case "queue":
                     runIn(4, "getPlaylists")
                 case "notif":
-                    runIn(2, "getNotifications")
+                    // runIn(2, "getNotifications")
                     break
                 case "bluetooth":
                     runIn(2, "getBluetoothDevices")
                     break
                 case "notification":
-                    runIn(2, "getNotifications")
+                    // runIn(2, "getNotifications")
                     break
                 case "online":
                     setOnlineStatus(true)
@@ -865,7 +869,7 @@ private refreshStage2() {
     }
     if((state?.permissions?.alarms == true) || (state?.permissions?.reminders == true)) {
         if(state?.permissions?.alarms == true) { getAlarmVolume() }
-        getNotifications()
+        // getNotifications()
     }
 
     if(state?.permissions?.bluetoothControl && !wsActive) {
@@ -1213,9 +1217,9 @@ private getNotifications(type="Reminder", all=false) {
                     newList?.push(li)
                 }
             }
-            if(isStateChange(device, "alexaNotifications", newList?.toString())) {
-                sendEvent(name: "alexaNotifications", value: newList, display: false, displayed: false)
-            }
+            // if(isStateChange(device, "alexaNotifications", newList?.toString())) {
+            //     sendEvent(name: "alexaNotifications", value: newList, display: false, displayed: false)
+            // }
             // log.trace "notifications: $newList"
             return newList
         }
@@ -1378,15 +1382,15 @@ def respExceptionHandler(ex, String mName, clearOn401=false, ignNullMsg=false) {
             logError("${mName} Response Exception | Status: (${sCode}) | Msg: ${errMsg}")
         }
     } else if(ex instanceof java.net.SocketTimeoutException) {
-        if(settings?.ignoreTimeoutErrors == true) logError("${mName} | Response Socket Timeout (Possibly an Amazon Issue) | Msg: ${ex?.getMessage()}")
+        if(settings?.ignoreTimeoutErrors == false) logError("${mName} | Response Socket Timeout (Possibly an Amazon Issue) | Msg: ${ex?.getMessage()}")
     } else if(ex instanceof java.net.UnknownHostException) {
         logError("${mName} | HostName Not Found | Msg: ${ex?.getMessage()}")
     } else if(ex instanceof org.apache.http.conn.ConnectTimeoutException) {
-        if(settings?.ignoreTimeoutErrors == true) logError("${mName} | Request Timeout (Possibly an Amazon/Internet Issue) | Msg: ${ex?.getMessage()}")
+        if(settings?.ignoreTimeoutErrors == false) logError("${mName} | Request Timeout (Possibly an Amazon/Internet Issue) | Msg: ${ex?.getMessage()}")
     } else if(ex instanceof java.net.NoRouteToHostException) {
         logError("${mName} | No Route to Connection (Possibly a Local Internet Issue) | Msg: ${ex}")
     } else if(ex instanceof javax.net.ssl.SSLHandshakeException) {
-        if(settings?.ignoreTimeoutErrors == true) logError("${mName} | Remote Connection Closed (Possibly an Amazon/Internet Issue) | Msg: ${ex}")
+        if(settings?.ignoreTimeoutErrors == false) logError("${mName} | Remote Connection Closed (Possibly an Amazon/Internet Issue) | Msg: ${ex}")
     } else { logError("${mName} Exception: ${ex}") }
 }
 
@@ -1770,6 +1774,16 @@ def playFlashBrief(volume=null, restoreVolume=null) {
             if(restoreVolume != null) { seqs?.push([command: "volume", value: restoreVolume]) }
             sendMultiSequenceCommand(seqs, "playFlashBrief")
         } else { doSequenceCmd("playFlashBrief", "flashbriefing") }
+    }
+}
+
+def playGoodNews(volume=null, restoreVolume=null) {
+    if(isCommandTypeAllowed("flashBriefing")) {
+        if(volume != null) {
+            List seqs = [[command: "volume", value: volume], [command: "goodnews"]]
+            if(restoreVolume != null) { seqs?.push([command: "volume", value: restoreVolume]) }
+            sendMultiSequenceCommand(seqs, "playGoodNews")
+        } else { doSequenceCmd("playGoodNews", "goodnews") }
     }
 }
 
@@ -2743,7 +2757,7 @@ def sendTestAlexaMsg() {
 Map seqItemsAvail() {
     return [
         other: [
-            "weather":null, "traffic":null, "flashbriefing":null, "goodmorning":null, "goodnight":null, "cleanup":null,
+            "weather":null, "traffic":null, "flashbriefing":null, "goodnews":null, "goodmorning":null, "goodnight":null, "cleanup":null,
             "singasong":null, "tellstory":null, "funfact":null, "joke":null, "playsearch":null, "calendartoday":null,
             "calendartomorrow":null, "calendarnext":null, "stop":null, "stopalldevices":null,
             "dnd_duration": "2H30M", "dnd_time": "00:30", "dnd_all_duration": "2H30M", "dnd_all_time": "00:30",
@@ -3131,11 +3145,11 @@ private postCmdProcess(resp, statusCode, data) {
             if(data?.cmdDesc && data?.cmdDesc == "SpeakCommand" && data?.message) {
                 state?.lastTtsCmdDt = getDtNow()
                 String lastMsg = data?.message as String ?: "Nothing to Show Here..."
-                sendEvent(name: "lastSpeakCmd", value: "${lastMsg}", descriptionText: "Last Speech text: ${lastMsg}", display: true, displayed: true)
+                sendEvent(name: "lastSpeakCmd", value: "${lastMsg}", descriptionText: "Last Text Spoken: ${lastMsg}", display: true, displayed: true)
                 sendEvent(name: "lastCmdSentDt", value: "${state?.lastTtsCmdDt}", descriptionText: "Last Command Timestamp: ${state?.lastTtsCmdDt}", display: false, displayed: false)
                 if(data?.oldVolume || data?.newVolume) {
-                    sendEvent(name: "level", value: (data?.oldVolume ?: data?.newVolume) as Integer, display: false, displayed: false)
-                    sendEvent(name: "volume", value: (data?.oldVolume ?: data?.newVolume) as Integer, display: false, displayed: false)
+                    sendEvent(name: "level", value: (data?.oldVolume ?: data?.newVolume) as Integer, display: true, displayed: true)
+                    sendEvent(name: "volume", value: (data?.oldVolume ?: data?.newVolume) as Integer, display: true, displayed: true)
                 }
                 schedQueueCheck(getAdjCmdDelay(getLastTtsCmdSec(), data?.msgDelay), true, null, "postCmdProcess(adjDelay)")
                 logSpeech(data?.message, statusCode, null)
@@ -3477,6 +3491,10 @@ Map createSequenceNode(command, value, devType=null, devSerial=null) {
                 seqNode?.operationPayload?.connectionRequest = [uri: "connection://AMAZON.Read.EmailSummary/amzn1.alexa-speechlet-client.DOMAIN:ALEXA_CONNECT", input: [:] ]
                 seqNode?.operationPayload?.remove('deviceType')
                 seqNode?.operationPayload?.remove('deviceSerialNumber')
+                break
+            case "goodnews":
+                seqNode?.type = "Alexa.GoodNews.Play"
+                seqNode?.skillId = "amzn1.ask.1p.goodnews"
                 break
             default:
                 return null
